fixed bug with custom context hook, started implementing styles for dark mode

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -8,7 +8,3 @@
 * {
     font-family: DMSans;
 }
-
-body {
-    background-color: hsl(0, 0%, 98%);
-}
